Fix vertical align for checkboxes and radio buttons

--- a/styles/inputs.css
+++ b/styles/inputs.css
@@ -28,6 +28,10 @@ INPUT, TEXTAREA, SELECT {
 	margin-bottom: 10px
 }
 
+INPUT[type="radio"] {
+	cursor: pointer
+}
+
 SELECT, INPUT[type="file"] {
 	height: 2.154em !important;
 	padding: 0.308em !important
